Fix home page component spacing

--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -142,8 +142,20 @@
 	max-width: calc(100% - 10px);
 }
 
-.previewImage, .previewParent {
+.previewParent {
 	margin: 10px;
+}
+
+@media (max-width: 1000px) {
+	.previewImage {
+		margin: 10px 10px 10px 10px;
+	}
+}
+
+@media (min-width: 1000px) {
+	.previewImage {
+		margin: 0px 10px 10px 10px;
+	}
 }
 
 .tag {
